[project]
name = "quarto-analysis"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "causal-learn>=0.1.4.3",
    "causallib>=0.10.0",
    "causalml>=0.15.5",
    "doubleml>=0.11.1",
    "dowhy>=0.14",
    "econml>=0.16.0",
    "jedi>=0.19.2",
    "jupyter>=1.1.1",
    "lxml>=6.0.2",
    "marginaleffects>=0.2.2",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "polars>=1.35.2",
    "pygraphviz>=1.14",
    "radian>=0.6.15",
    "seaborn>=0.13.2",
]
